# sigil_cranelift

./: Cargo.toml
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: main.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: ast.rs  compiler.rs  grammar.lalrpop  lib.rs
examples/: fib.sgl
